--- a/imps.cabal
+++ b/imps.cabal
@@ -1,10 +1,10 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.33.0.
+-- This file has been generated from package.yaml by hpack version 0.34.3.
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: c264d9c3782a2d5f69ee8115dc88504c8daa64d273392a537f0990e760cd0195
+-- hash: a8e5232c0cecd539a93b2eeea2cd134897aae787bf4e35256012b798d720df86
 
 name:           imps
 version:        0.1.0.0
@@ -37,6 +37,7 @@ library
       base >=4.7 && <5
     , bytestring
     , gd
+    , hsexif
     , http-types
     , scotty
     , text
@@ -53,6 +54,7 @@ executable imps
       base >=4.7 && <5
     , bytestring
     , gd
+    , hsexif
     , http-types
     , imps
     , scotty
@@ -71,6 +73,7 @@ test-suite imps-test
       base >=4.7 && <5
     , bytestring
     , gd
+    , hsexif
     , http-types
     , imps
     , scotty
