--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,5 @@
+variables:
+  LATEST = "1.0"
 stages:
   - build
 
@@ -10,13 +12,32 @@ stages:
   tags:
     - hz-afs
 
-build:
+build_dev:
+  extends: .build_job
+  script:
+    - docker build --no-cache -t $CI_REGISTRY_IMAGE:dev .
+    - docker push $CI_REGISTRY_IMAGE:dev
+  only:
+    - master
+
+build_latest:
   extends: .build_job
   script:
     - docker build --no-cache -t $CI_REGISTRY_IMAGE:latest .
     - docker push $CI_REGISTRY_IMAGE:latest
   only:
-    - master
+    variables:
+      - $CI_COMMIT_REF_NAME == $LATEST
+  except:
+    - tags
+
+build_tag:
+  extends: .build_job
+  script:
+    - docker build --no-cache -t $CI_REGISTRY_IMAGE:$CI_COMMIT_TAG .
+    - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_TAG
+  only:
+    - tags
 
 build_test:
   extends: .build_job
@@ -24,4 +45,8 @@ build_test:
     - docker build --no-cache -t $CI_REGISTRY_IMAGE:test .
     - docker push $CI_REGISTRY_IMAGE:test
   except:
-    - master
+    variables:
+      - $CI_COMMIT_REF_NAME == $LATEST
+    refs:
+      - master
+      - tags
