--- a/package.yaml
+++ b/package.yaml
@@ -22,16 +22,15 @@ description:         Please see the README on GitHub at <https://github.com/gith
 dependencies:
 - JuicyPixels
 - JuicyPixels-extra
-- QuickCheck
 - base >= 4.7 && < 5
 - bytestring
 - free
 - gd
 - hsexif
-- hspec
 - http-types
-- scotty
 - text
+- wai
+- warp
 
 library:
   source-dirs: src
@@ -57,4 +56,6 @@ tests:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
+    - QuickCheck
+    - hspec
     - imps
