--- a/stack.yaml
+++ b/stack.yaml
@@ -41,6 +41,9 @@ packages:
 #
 extra-deps: 
   - hsexif-0.6.1.8
+  - imagemagick-0.0.4.2
+  - resourcet-1.1.11
+  - unliftio-core-0.1.2.0
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
@@ -65,3 +68,4 @@ extra-deps:
 #
 # Allow a newer minor version of GHC than the snapshot specifies
 # compiler-check: newer-minor
+allow-newer: true
